kustomize/overlays/uat/postgres_fdw_patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: itassets-postgres-fdw
  labels:
    app: itassets-postgres-fdw
spec:
  selector:
    matchLabels:
      app: itassets-postgres-fdw
  template:
    metadata:
      labels:
        app: itassets-postgres-fdw
    spec:
      containers:
      - name: itassets-postgres-fdw
        volumeMounts:
          - name: itassets-postgres-fdw-data
            mountPath: /var/lib/postgresql/data
      volumes:
        - name: itassets-postgres-fdw-data
          persistentVolumeClaim:
            claimName: itassets-postgres-fdw-data-uat
