kustomize/overlays/uat/clusterip_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: itassets-clusterip
spec:
  selector:
    app: itassets
    variant: uat
