kustomize/overlays/uat/service_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: itassets-clusterip
spec:
  type: ClusterIP
  selector:
    app: itassets-uat
    variant: uat
